<resources>
    <string name="app_name">MyFitnessApp</string>

    <string name="save">Save</string>
    <string name="reset">Reset</string>

    <string name="repeat">Reps</string>
    <string name="sets">Sets</string>
    <string name="rest_time">Rest</string>

    <!--default start value-->
    <string name="default_start_value">0</string>

    <!--start and stop timer-->
    <string name="start_workout">Start Workout</string>
    <string name="stop_workout">Stop Workout</string>

    <string name="value_cannot_be_negative">Value cannot be negative</string>

    <string name="select_data_to_save">Kindly select data you want to save</string>
    <string name="saved_successfully">Saved successfully</string>
    <string name="saved_data_loaded_successfully">Saved data loaded successfully</string>
    <string name="reset_completed">Reset completed</string>

    <string name="set_completed">Set completed</string>

    <string name="not_allowed">Not allowed</string>

    <string name="workout_completed">Workout Completed</string>
</resources>
