<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <!--start workout-->
            <TextView
                android:id="@+id/tv_start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/tv_background"
                android:gravity="center"
                android:text="@string/start_workout"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/btn_text_size"
                android:textStyle="bold" />

            <!--stop workout-->
            <TextView
                android:id="@+id/tv_stop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/tv_background"
                android:gravity="center"
                android:text="@string/stop_workout"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/btn_text_size"
                android:textStyle="bold"
                android:visibility="invisible" />

        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.8"
            android:orientation="vertical"
            android:padding="@dimen/linear_layout_padding"
            android:weightSum="6">

            <!--Sets-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:text="@string/repeat"
                    android:textSize="@dimen/tv_text_size" />

                <ImageView
                    android:id="@+id/sets_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/vector_plus" />

                <ImageView
                    android:id="@+id/sets_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/vector_minus" />

            </LinearLayout>

            <TextView
                android:id="@+id/sets_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_tv"
                android:layout_weight="1"
                android:text="@string/default_start_value"
                android:textSize="@dimen/tv_text_size" />

            <!--Repeat-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:text="@string/sets"
                    android:textSize="@dimen/tv_text_size" />

                <ImageView
                    android:id="@+id/repeat_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/vector_plus" />

                <ImageView
                    android:id="@+id/repeat_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/vector_minus" />

            </LinearLayout>

            <TextView
                android:id="@+id/repeat_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_tv"
                android:layout_weight="1"
                android:text="@string/default_start_value"
                android:textSize="@dimen/tv_text_size" />

            <!--Timer-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:text="@string/rest_time"
                    android:textSize="@dimen/tv_text_size" />

                <ImageView
                    android:id="@+id/timer_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/vector_plus" />

                <ImageView
                    android:id="@+id/timer_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/vector_minus" />

            </LinearLayout>

            <TextView
                android:id="@+id/timer_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_tv"
                android:layout_weight="1"
                android:text="@string/default_start_value"
                android:textSize="@dimen/tv_text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="0.2"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:padding="@dimen/btn_padding"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="@dimen/btn_text_size" />

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:padding="@dimen/btn_padding"
                android:text="@string/reset"
                android:textColor="@color/white"
                android:textSize="@dimen/btn_text_size" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>